--- a/debian/control
+++ b/debian/control
@@ -1,17 +1,20 @@
 Source: kdebluetooth4
-Section: kde
+Section: net
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
-Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>, Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>
-Build-Depends: cdbs, debhelper (>= 5.0.0), automake, kdelibs4-dev, kdepim-dev, libdbus-qt-1-dev, libobexftp-dev
-Standards-Version: 3.8.0
+Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>,
+ Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>
+Build-Depends: cdbs, debhelper (>= 7), cmake, pkg-kde-tools,
+ kdelibs5-dev, kdebase-workspace-dev
+Standards-Version: 3.8.1
 Homepage: http://sourceforge.net/projects/kde-bluetooth/
 Vcs-Git: git://git.debian.org/pkg-kde/kde-extras/kdebluetooth4.git
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-extras/kdebluetooth4.git
 
 Package: kdebluetooth4
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends}, bluez-utils (>= 3.13), python-qt4-dbus, python-qt4
+Depends: ${shlibs:Depends}, ${misc:Depends},
+ bluetooth, obex-data-server, python-qt4-dbus, python-qt4
 Suggests: python
 Conflicts: kdebluetooth
 Replaces: kdebluetooth
