--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,12 @@
 #!/usr/bin/make -f
 
+include /usr/share/pkg-kde-tools/makefiles/1/cdbs/kde.mk
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/kde.mk
 include /usr/share/cdbs/1/rules/utils.mk
 
-DEB_DH_INSTALL_ARGS = --sourcedir=debian/tmp
-
-install/kdebluetooth4::
+install/kdebluetooth::
 	dh_installdirs usr/share/autostart usr/bin
-
+	install -m 0755 debian/kblueplugd
+		 $(CURDIR)/debian/kdebluetooth/usr/bin/
+	install -m 0644 debian/kblueplugd.desktop
+		 $(CURDIR)/debian/kdebluetooth/usr/share/autostart/
