--- a/debian/rules
+++ b/debian/rules
@@ -1,11 +1,11 @@
 #!/usr/bin/make -f
 
 include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/class/kde.mk
-include /usr/share/cdbs/1/rules/utils.mk
+include /usr/share/cdbs/1/class/cmake.mk
 
 DEB_DH_INSTALL_ARGS = --sourcedir=debian/tmp
 
 install/kdebluetooth4::
 	dh_installdirs usr/share/autostart usr/bin
-
+	install -m755 debian/kblueplugd debian/kdebluetooth/usr/bin/
+	install -m644 debian/kblueplugd.desktop debian/kdebluetooth/usr/share/autostart/
