--- a/debian/rules
+++ b/debian/rules
@@ -1,12 +1,14 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/makefiles/1/cdbs/kde.mk
-include /usr/share/cdbs/1/rules/debhelper.mk
-include /usr/share/cdbs/1/rules/utils.mk
+include /usr/share/pkg-kde-tools/makefiles/1/debhelper/kde.mk
 
-install/kdebluetooth::
-	dh_installdirs usr/share/autostart usr/bin
-	install -m 0755 debian/kblueplugd \
-		 $(CURDIR)/debian/kdebluetooth/usr/bin/
-	install -m 0644 debian/kblueplugd.desktop \
-		 $(CURDIR)/debian/kdebluetooth/usr/share/autostart/
+%:
+	dh --with quilt $@
+
+override_dh_install:
+	install -D -p -m0755 debian/kblueplugd \
+		$(CURDIR)/debian/kdebluetooth/usr/bin/kblueplugd
+	install -D -p -m0644 debian/kblueplugd.desktop \
+		$(CURDIR)/debian/kdebluetooth/usr/share/autostart/kblueplugd.desktop
+
+.PHONY: override_dh_auto_test
