Changed section to kde.

--- a/debian/control
+++ b/debian/control
@@ -1,5 +1,5 @@
 Source: kdebluetooth
-Section: net
+Section: kde
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>,
