--- a/po/CMakeLists.txt
+++ b/po/CMakeLists.txt
@@ -1,13 +1,19 @@
+add_subdirectory( cs )
 add_subdirectory( da )
 add_subdirectory( de )
 add_subdirectory( en_GB )
+add_subdirectory( eo )
 add_subdirectory( es )
 add_subdirectory( et )
 add_subdirectory( fr )
+add_subdirectory( ga )
 add_subdirectory( gl )
+add_subdirectory( it )
 add_subdirectory( km )
 add_subdirectory( lt )
 add_subdirectory( nds )
+add_subdirectory( nl )
+add_subdirectory( pa )
 add_subdirectory( pt )
 add_subdirectory( pt_BR )
 add_subdirectory( ro )
