--- a/src/device-manager/CMakeLists.txt
+++ b/src/device-manager/CMakeLists.txt
@@ -19,7 +19,7 @@ kde4_add_ui_files(deviceman_SRCS
 kde4_add_executable(kbluetooth-devicemanager ${deviceman_SRCS})
 
 target_link_libraries(kbluetooth-devicemanager
-                      ${KDE4_KIO_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDE4_SOLID_LIBS} solidcontrol)
+                      ${KDE4_KIO_LIBRARY} ${KDE4_KDEUI_LIBS} ${KDE4_SOLID_LIBS} ${KDE4WORKSPACE_SOLIDCONTROL_LIBRARY})
  
 install(TARGETS kbluetooth-devicemanager
         DESTINATION ${KDE4_BIN_INSTALL_DIR})
