--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: kde
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>,
- Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>
+ Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>, Didier Raboud <didier@raboud.com>
 Build-Depends: debhelper (>= 7.3), quilt, cmake, pkg-kde-tools (>= 0.4.10),
  kdelibs5-dev (>= 4:4.2.96), kdebase-workspace-dev (>= 4:4.2.96),
  libknotificationitem-1-dev
