* Switch to dpkg-source 3.0 (quilt) format * Update debian/control:   - Bump build dependencies versions (debhelper and pkg-kde-tools)   - Remove quilt build dependency * Update debian/rules:   - Enable parallel build (pass --parallel option to dh)   - Use kde sequence addon (pass --with kde option to dh)

--- a/debian/rules
+++ b/debian/rules
@@ -1,9 +1,7 @@
 #!/usr/bin/make -f
 
-include /usr/share/pkg-kde-tools/makefiles/1/debhelper/kde.mk
-
 %:
-	dh --with quilt $@
+	dh --parallel --with kde $@
 
 override_dh_install:
 	install -D -p -m0755 debian/kblueplugd \
