--- a/debian/control
+++ b/debian/control
@@ -3,8 +3,9 @@ Section: kde
 Priority: optional
 Maintainer: Debian KDE Extras Team <pkg-kde-extras@lists.alioth.debian.org>
 Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>,
- Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>, Didier Raboud <didier@raboud.com>
-Build-Depends: debhelper (>= 7.3), quilt, cmake, pkg-kde-tools (>= 0.4.10),
+ Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>,
+ Didier Raboud <didier@raboud.com>
+Build-Depends: debhelper (>= 7.4.13), cmake, pkg-kde-tools (>= 0.6.1),
  kdelibs5-dev (>= 4:4.2.96), kdebase-workspace-dev (>= 4:4.2.96),
  libknotificationitem-1-dev
 Standards-Version: 3.8.4
