--- a/debian/control
+++ b/debian/control
@@ -6,8 +6,7 @@ Uploaders: Michael Meskes <meskes@debian.org>, Achim Bohnet <ach@mpe.mpg.de>,
  Mark Purcell <msp@debian.org>, Fathi Boudra <fabo@debian.org>,
  Didier Raboud <didier@raboud.com>
 Build-Depends: debhelper (>= 7.4.13), cmake, pkg-kde-tools (>= 0.6.1),
- kdelibs5-dev (>= 4:4.2.96), kdebase-workspace-dev (>= 4:4.2.96),
- libknotificationitem-1-dev
+ kdelibs5-dev (>= 4:4.3.73), kdebase-workspace-dev (>= 4:4.2.96)
 Standards-Version: 3.8.4
 Homepage: http://kde-apps.org/content/show.php/kbluetooth?content=112110
 Vcs-Git: git://git.debian.org/pkg-kde/kde-extras/kdebluetooth4.git
