--- a/debian/control
+++ b/debian/control
@@ -9,16 +9,15 @@ Build-Depends: debhelper (>= 7.4.15), cmake, pkg-kde-tools (>= 0.6.5),
  kdelibs5-dev (>= 4:4.3.73), kdebase-workspace-dev (>= 4:4.2.96),
  shared-desktop-ontologies
 Standards-Version: 3.8.4
-Homepage: http://kde-apps.org/content/show.php/kbluetooth?content=112110
+Homepage: http://www.kde-apps.org/content/show.php/kbluetooth?content=112110
 Vcs-Git: git://git.debian.org/pkg-kde/kde-extras/kdebluetooth4.git
 Vcs-Browser: http://git.debian.org/?p=pkg-kde/kde-extras/kdebluetooth4.git
 
 Package: kbluetooth
 Architecture: any
-Depends: ${shlibs:Depends}, ${misc:Depends},
- bluez, obex-data-server, python-qt4-dbus, python-qt4
+Depends: ${shlibs:Depends}, ${misc:Depends}, bluez, obex-data-server
 Recommends: bluez-alsa, bluez-cups
-Suggests: python
+Replaces: kdebluetooth (<< 1:0.4.2)
 Description: KDE Bluetooth Framework
  The KDE Bluetooth Framework is a set of tools built on top of Linux' Bluetooth
  stack BlueZ. It provides easy access to the most common Bluetooth profiles and
